modify pom to add junit-bom to manage the junit version; also add JUnit Pioneer to support setting environment variable